[package]
name = "ldk-node-offers-receive-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldk-node = { git = "https://github.com/tnull/ldk-node.git", rev = "bc1fac375fc62827cce30b5c625667c3bcfb1426" }
tokio = { version = "1.38.0", features = ["full"] }
